--- a/src/components/layout/Navbar.module.css
+++ b/src/components/layout/Navbar.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    background-color: rgb(200, 200, 200);
+    /* background-color: rgb(200, 200, 200); */
     height: 50px;
   }
 
@@ -10,13 +10,13 @@
 
   .btn {
     font: inherit;
-    padding: 0.5rem 1.5rem;
+    padding: 0.2rem 0.75rem;
     cursor: pointer;
     border-radius: 4px;
-    background-color: rgb(200, 200, 200);
-    border: 1px solid rgb(200, 200, 200);
+    background-color: white;
+    border: 1px solid white;
     margin: 0 1rem;
-    color: black;
+    color: #5e6160;
   }
 
   
