--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,14 @@
 
 body {
   font-family: sans-serif;
-  margin: 3rem;
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-top: 50px;
   /* background-color: #dfdfdf; */
 }
 
 h1, h2 {
-  color: #333333;
+  color: #646c6b;
  text-align: center;
  margin: 20px 0px 20px 0px;
 }
@@ -31,11 +33,12 @@ p {
   justify-content: space-evenly;
   align-items: center;
   height: 80%;
+  margin: 40px;
 }
 
 .headshot {
   margin: 40px;
-  height: 30em;
+  height: 20em;
 }
 
 
@@ -45,11 +48,12 @@ p {
   margin: 10%;
   width: 50%;
   /* font-size: larger; */
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   line-height: 30px;
   /* border-radius: 4px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2); */
   padding: 1rem;
+  color: #5e6160;
 }
 
 .aboutMain {
@@ -79,6 +83,7 @@ p {
 
 .aboutPara {
   width: 50%;
+  color: #646c6b;
 }
 
 .skills {
@@ -86,21 +91,7 @@ margin-top: 60px;
 background-color: blueviolet;
 }
 
-.footer {
-  width: 30%;
-  display: flex;
-  justify-content: space-evenly;
-  margin: 5px 5px 5px 5px;
-}
 
-.icon {
-  border-color: rgb(180, 180, 181);
-  color: rgb(125, 125, 125);
-}
-
-.icon:hover {
-  background-color: rgb(210, 210, 213);
-}
 
 /* .btn {
   font: inherit;
