--- a/src/components/layout/Footer.module.css
+++ b/src/components/layout/Footer.module.css
@@ -1,9 +1,10 @@
 .footer {
-    width: 30%;
+    width: 40%;
     display: flex;
     justify-content: space-evenly;
-    margin: 5px 5px 5px 5px;
+    margin: 40px 5px 5px 0px;
     color: #5e6160;
+    /* background-color: grey; */
   }
   
   .icon {
@@ -27,7 +28,7 @@
     font: inherit;
     padding: 0.2rem 0.75rem;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 10px;
     /* background-color: rgb(200, 200, 200);
     border: 1px solid rgb(200, 200, 200); */
     margin: 0 1rem;
