--- a/src/index.css
+++ b/src/index.css
@@ -3,47 +3,41 @@
   box-sizing: border-box;
 }
 
-
 body {
   font-family: sans-serif;
-  margin-left: 200px;
-  margin-right: 200px;
-  margin-top: 50px;
+  /* margin-left: 200px;
+  margin-right: 200px; */
+  margin: 0 auto;
+  /* margin-top: 50px; */
+  width: 60%;
   /* background-color: #dfdfdf; */
 }
 
-h1, h2 {
-  color: #646c6b;
+h2 {
+  color: #6c646a;
  text-align: center;
- margin: 20px 0px 10px 0px;
+ margin: 40px 0px 30px 0px;
 }
 
 p {
   display: inline;
 }
 
-/* .header {
-  position: fixed;
-  top: 0;
-} */
-
 .main {
   display: flex;
   /* background-color: rgb(179, 207, 249); */
-  justify-content: space-evenly;
-  align-items: center;
-  height: 500%;
-  margin: 60px;
+  /* justify-content: space-evenly; */
+  /* align-items: center; */
+  /* height: 50%; */
+  margin: 7em 0;
 }
-
-
 
 .headshot {
   /* margin: 40px;
   height: 20em; */
   /* background-image: url("url"); */
-  width:140px;
-  height:140px;
+  width:150px;
+  height:150px;
   background-size:contain;
   background-position:center;
   border-radius:50%;
@@ -51,19 +45,7 @@ p {
   object-position: 0 20%;
 }
 
-
-
 .intro {
-  /* background-color: rgb(180, 180, 181); */
-  /* margin: 10%; */
-  margin: 10% 0 10% 0;
-  width: 60%;
-  /* font-size: larger; */
-  letter-spacing: 1px;
-  line-height: 30px;
-  /* border-radius: 4px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2); */
-  padding: 1rem;
   color: rgb(94, 97, 96);
 }
 
@@ -80,20 +62,20 @@ p {
   /* background-color: rgb(180, 180, 181); */
   margin: 1%;
   width: 100%;
-  /* font-size: larger; */
-  letter-spacing: 1.5px;
-  line-height: 20px;
+  font-size: medium;
+  letter-spacing: 1.3px;
+  line-height: 18px;
   /* border-radius: 4px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2); */
   padding: 0.5rem;
 }
 
 .aboutPics {
-  height: 170px;
+  height: 130px;
 }
 
 .aboutPara {
-  width: 50%;
+
   color: #646c6b;
 }
 
@@ -115,46 +97,24 @@ p {
   color: rgb(198, 3, 3);
 }
 
-/* .btn--alt {
-  background-color: transparent;
-  color: #800040;
+@media (max-width: 1200px) {
+  .main {
+    margin: 5em 0;
+  }
+  .headshot {
+    width:120px;
+    height:120px;
+    background-size:contain;
+    background-position:center;
+    border-radius:50%;
+    object-fit: cover;
+    object-position: 0 20%;
+  }
 }
 
-.btn--alt:hover {
-  background-color: #f8dae9;
-} */
-
-/* .card {
-  background-color: white;
-  border-radius: 4px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  padding: 1rem;
-  width: 20rem;
+@media (max-width: 600px) {
+  .main {
+    margin: 2em 0;
+  }
+  
 }
-
-.actions {
-  text-align: right;
-}
-
-.modal {
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
-  background-color: white;
-  padding: 1rem;
-  text-align: center;
-  width: 30rem;
-  z-index: 10;
-  position: fixed;
-  top: 20vh;
-  left: calc(50% - 15rem);
-}
-
-.backdrop {
-  position: fixed;
-  z-index: 1;
-  background-color: rgba(0, 0, 0, 0.75);
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
-} */
