--- a/src/components/layout/Footer.module.css
+++ b/src/components/layout/Footer.module.css
@@ -2,13 +2,17 @@
     /* width: 40%; */
     display: flex;
     justify-content: center;
-    margin: 40px 0 0 0;
+    margin: 0 0 40px 0;
     color: #5e6160;
     /* background-color: grey; */
   }
   
   .icon {
+    color:#5e6160;
     border: none;
+    margin: 0 10px;
+    font-size: 25px;
+    border-radius: 50%;
     background-color: white;
     transition: 0.2s;
   }
