--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ p {
   /* justify-content: space-evenly; */
   /* align-items: center; */
   /* height: 50%; */
-  margin: 7em 0;
+  margin: 2rem 0;
 }
 
 .headshot {
