--- a/src/pages/Portfolio.module.css
+++ b/src/pages/Portfolio.module.css
@@ -2,6 +2,13 @@
     border: none;
     background-color: white;
     transition: 0.2s;
+    color: #5e6160;
+    font-size: 20px;
+    margin: 10px 15px;
+  }
+
+  .main {
+    margin: 2em 0;
   }
 
   h4 {
