--- a/src/pages/Skills.module.css
+++ b/src/pages/Skills.module.css
@@ -3,9 +3,10 @@
   /* height: 100%; */
   /* display: flex;
   flex-direction: column; */
-  justify-content: space-between;
-  color: #646c6b;
-  margin-bottom: 3em;
+  /* justify-content: space-between; */
+  /* color: #646c6b; */
+  /* margin-bottom: 3em; */
+  /* border: 1px solid grey; */
 }
 
 .line {
